--- a/Manpower_MVC/Views/PrintList/PayDetail.cshtml
+++ b/Manpower_MVC/Views/PrintList/PayDetail.cshtml
@@ -44,15 +44,15 @@
         </tr>
         <tr>
             <th width="10%">日期</th>
-            <th width="20%">單號</th>
-            <th width="20%">工種</th>
-            <th>數量</th>
-            <th>金額</th>
-            <th>數量</th>
-            <th>金額</th>
-            <th>數量</th>
-            <th>金額</th>
-            <th>合計</th>
+            <th width="10%">單號</th>
+            <th width="10%">工種</th>
+            <th width="10%">數量</th>
+            <th width="10%">金額</th>
+            <th width="10%">數量</th>
+            <th width="10%">金額</th>
+            <th width="10%">數量</th>
+            <th width="10%">金額</th>
+            <th width="10%">合計</th>
         </tr>
     </thead>
     <tbody></tbody>
@@ -128,7 +128,7 @@
                     $.each(data, function (index, item) {
                         $('#tSecond tbody').append(
                             "<tr id='" + item.ID + "'>" +
-                            "<td>" + item.Date + "</td>" +
+                            "<td>" + (JSON.parseWithDate(JSON.stringifyWcf(item.Date))).f("yyyy-MM-dd") + "</td>" +
                             "<td>" + item.SerialNum + "</td>" +
                             "<td>" + item.WorkCate + "</td>" +
                             "<td>" + item.SalaryDay + "</td>" +
