--- a/Manpower_MVC/Views/Shared/_Header.cshtml
+++ b/Manpower_MVC/Views/Shared/_Header.cshtml
@@ -34,6 +34,9 @@
                                             <input type='password' class='form-control' id='pwd' name='pwd' required='required' /> 
                                         </div> 
                                     </div>
+                                    <div class="pull-left">
+                                        <a href='@Url.Action("Register", "User")' class="btn btn-default btn-flat">註冊</a>
+                                    </div>
                                     <div class="pull-right">
                                         <input id='submit' type='submit' class='btn btn-primary btn-flat' value='登入' />
                                     </div>
