--- a/Manpower_MVC/Views/User/Register.cshtml
+++ b/Manpower_MVC/Views/User/Register.cshtml
@@ -28,40 +28,33 @@
 </head>
 <body>
     <div class="container">
-        <h2>登入 全域人力管理系統</h2>
+        <h2>註冊 全域人力管理系統</h2>
         <h3></h3>
-        <form id="form" method="post" action='@Url.Action("Login", "User")'>
+        <form id="form" method="post" action='@Url.Action("Register", "User")'>
             <div>
                 <div class='form-group'>
                     <label for='acc'>帳號</label>
-                    <input type='text' class='form-control' id='acc' name='acc' required='required' />
+                    <input type='text' class='form-control' id='Account' name='Account' required='required' />
                 </div>
                 <div class='form-group'>
                     <label for='pwd'>密碼</label>
-                    <input type='password' class='form-control' id='pwd' name='pwd' required='required' />
+                    <input type='password' class='form-control' id='Password' name='Password' required='required' />
                 </div>
                 <div class='form-group'>
-                    <a href='@Url.Action("Register", "User")'>沒有帳號？來註冊吧！</a>
+                    <label for='name'>姓名</label>
+                    <input type='text' class='form-control' id='Name' name='Name' required='required' />
+                </div>
+                <div class='form-group'>
+                    <a href='@Url.Action("Login", "User")'>已經註冊了？來這登入吧！</a>
                 </div>
             </div>
             <div class="pull-left">
                 <a href='@Url.Action("Index", "Home")' role="button" class="btn btn-default btn-flat">回主頁</a>
             </div>
             <div class="pull-right">
-                <input id='submit' type='submit' class='btn btn-primary btn-flat' value='登入' />
+                <input id='submit' type='submit' class='btn btn-primary btn-flat' value='註冊' />
             </div>
         </form>
     </div>
 </body>
 </html>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script>
-    $(document).ready(function () {
-        if (@TempData["loginMsg"] == 0) {
-            alert("帳號或密碼錯誤，請再輸入一次");
-        }else if (@TempData["loginMsg"] == 1) {
-            alert("請登入後再進行操作");
-        }
-    });
-</script>
