--- a/Manpower_MVC/Views/Shared/_Header.cshtml
+++ b/Manpower_MVC/Views/Shared/_Header.cshtml
@@ -51,6 +51,9 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-body">
+                                <div class="pull-left">
+                                    <a href='@Url.Action("Index", "User")' class="btn btn-default btn-flat">管理使用者</a>
+                                </div>
                                 <div class="pull-right">
                                     <a href='@Url.Action("Logout", "User")' class="btn btn-default btn-flat">登出</a>
                                 </div>
