select2  + disabled option undone

--- a/Manpower_MVC/Views/Shared/_Layout.cshtml
+++ b/Manpower_MVC/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
     @{ Html.RenderPartial("_Scripts"); }
     @RenderSection("pagesection", false)
 
-    <div class="modal fade" id="modalDiv" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal fade" id="modalDiv" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
